# BankingNudges

./: .gitignore  BankOfGraeme.sln  README.md  customer-personas.md  docker-compose.yml  nudge-signals.md  run.sh  stop.sh
.github/: copilot-instructions.md
src/BankOfGraeme.Api/: BankOfGraeme.Api.csproj  Program.cs  appsettings.Development.json  appsettings.json
src/BankOfGraeme.Api/Data/: BankDbContext.cs  BankDbContextFactory.cs  ForeignTransactionCalculator.cs  SeedData.cs
src/BankOfGraeme.Api/Endpoints/: AccountEndpoints.cs  ChatEndpoints.cs  CrmAccountEndpoints.cs  CrmAuthEndpoints.cs  (+11 more)
src/BankOfGraeme.Domain/: BankOfGraeme.Domain.csproj
src/BankOfGraeme.Functions/: BankOfGraeme.Functions.csproj  NightlyInterestFunction.cs  Program.cs  TimeTravelCatchUpFunction.cs
src/BankOfGraeme.Neo4j/: BankOfGraeme.Neo4j.csproj  Neo4jGraphSyncService.cs  Program.cs  appsettings.json
src/BankOfGraeme.Tests/: BankOfGraeme.Tests.csproj  BranchAndAtmTests.cs  ForeignTransactionCalculatorTests.cs  FraudScenarioTests.cs  NudgeBatchRunnerTests.cs  NudgeChatAgentTests.cs  NudgeGeneratorValidationTests.cs  NudgePatternDetectorTests.cs  NudgeSignalDetectorTests.cs  TransferLinkageTests.cs  TravelSignalDetectionTests.cs
src/bank-crm/: index.html  package-lock.json  package.json  vite.config.ts
src/bank-mcp/: README.md  pyproject.toml
src/bank-mcp/bank_mcp/: db.py  models.py  server.py
src/bank-mcp/bank_mcp/tools/: accounts.py  analytics.py  customers.py  notes.py  payments.py  transactions.py
src/bank-ui/: index.html  package-lock.json  package.json  vite.config.ts
(+97 files in other folders)
